@@ -497,10 +497,15 @@ Other changes:
 
 * OpenVMS is detected as a valid OS family.
 
-* DirectoryScanner has been optimized for cases where include patterns do not start with wildcards
-  Bugzilla Report 20103.
+* DirectoryScanner has been optimized for cases where include patterns do not 
+  start with wildcards.  Bugzilla Report 20103.
 
 * Added keep-going feature. Bugzilla Report 21144
+
+* The archives generated by <zip> and friends will now contain CRC and
+  size information in the "local file header", thereby providing this
+  information to applications that read the archives using
+  java.util.ZipInputStream.  Bugzilla Report 19195.
 
 Changes from Ant 1.5.2 to Ant 1.5.3
 ===================================
